feat(report): create a wrapper class for a list of reports
GET reports now return a ReportsList object which contain a list of reportsDTO